--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.softwerke</groupId>
-    <artifactId>catalog</artifactId>
+    <artifactId>java-2018-kuzhakova</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
